--- a/src/app/homescreen/homescreen.component.css
+++ b/src/app/homescreen/homescreen.component.css
@@ -6,7 +6,7 @@
   
   }
   body  {
-    /* background-image: url("../../assets/images/homescreen.jpg"); */
+    background-image: url("../images/Homescreen.jpeg");    
     background-color: #cccccc;
   }
   
