--- a/src/app/loginemployer/loginemployer.component.html
+++ b/src/app/loginemployer/loginemployer.component.html
@@ -61,7 +61,7 @@
             </div>
           </form>
     
-          <div class="login100-more" style="background-image: url('../../assets/images/loginlogo.png');">
+          <div class="login100-more" style="background-image: url('../images/bgGreen.jpg');">
     
         </div>
       </div>
