Routing links added for pages

--- a/src/app/homescreen/homescreen.component.html
+++ b/src/app/homescreen/homescreen.component.html
@@ -41,10 +41,11 @@
           <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p>
           <div class="row">
             <div class="col-lg-12" style="text-align: center">
-    <button type="button" class="btn btn-success" style="margin: 50px">Niners</button>
+    <button type="button" class="btn btn-success" style="margin: 50px" routerLink="/loginattendee" routerLinkActive="active">Niners</button>
+   
               <!-- <button type="submit "  class="btn btn-success" style="margin: 50px" [routerLink]="['../login']">Attendees</button> -->
     
-              <button type="button" class="btn btn-warning"style="margin: 50px">Recruiters</button>
+              <button type="button" class="btn btn-warning"style="margin: 50px" routerLink="/loginemployer" routerLinkActive="active">Recruiters</button>
               <!-- <button type="submit " class="btn btn-warning" style="margin: 50px" [routerLink]="['../login']">Recruiters</button> -->
     
             </div>
