--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,4 +41,4 @@
 
 <button routerLink="/attendee">Update Profile</button>
 
-<a routerLink="/careerfar" routerLinkActive="active">Return to Career Fairs</a>  <br>
+<a routerLink="/attendeecareerfair" routerLinkActive="active">Return to Career Fairs</a>  <br>
