--- a/src/app/loginattendee/loginattendee.component.html
+++ b/src/app/loginattendee/loginattendee.component.html
@@ -39,7 +39,7 @@
     
     
             <div class="container-login100-form-btn">
-              <button class="login100-form-btn" [routerLink]="['../careerfair']" >
+              <button class="login100-form-btn" routerLink="/attendeecareerfair" routerLinkActive="active">
                 Login
               </button>
             </div>
