--- a/src/app/careerfair/careerfair.component.html
+++ b/src/app/careerfair/careerfair.component.html
@@ -1,13 +1,14 @@
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
-        <div class="container">
-          <a class="navbar-brand" href="#">CAVA</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <!--<li class="nav-item active">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
+    <div class="container">
+      <a class="navbar-brand" href="#">CAVA</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <!--<li class="nav-item active">
                 <a class="nav-link" href="#">Home
                   <span class="sr-only">(current)</span>
                 </a>
@@ -21,24 +22,24 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Profile</a>
               </li>-->
-              <!-- <li class="nav-item">
+          <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Admin Login</a>
               </li> -->
-            </ul>
-          </div>
-        </div>
-      </nav>
-    
-      <div class="containerb">
-        <div class="card border-0 shadow my-5" style="margin: 100px;">
-      
-          <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
-            <h1 class="font-weight-light" style="text-align: center">Career Fairs</h1>
-            <!-- <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p> -->
-            <div class="row">
-    
-              <!-- Card for career fairs - hardcoded data used for now -->
-                <!-- <div class="col-sm-4 py-2">
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="containerb">
+    <div class="card border-0 shadow my-5" style="margin: 100px;">
+
+      <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
+        <h1 class="font-weight-light" style="text-align: center">Career Fairs</h1>
+        <!-- <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p> -->
+        <div class="row">
+
+          <!-- Card for career fairs - hardcoded data used for now -->
+          <!-- <div class="col-sm-4 py-2">
                     <div class="card h-100 border-primary">
                         <div class="card-body">
                             <h3 class="card-title">Fall Career Fair 2019</h3>
@@ -48,7 +49,7 @@
                         </div>
                     </div>
                 </div> -->
-    <!-- 
+          <!-- 
                 <div class="col-sm-4 py-2">
                   <div class="card h-100 border-primary">
                       <div class="card-body">
@@ -59,20 +60,22 @@
                       </div>
                   </div>
               </div> -->
-    
-              <div class="col-sm-4 py-2" *ngFor = "let careerFair of careerFairs">
-                <div class="card h-100 border-primary">
-                    <div class="card-body">
-                        <h3 class="card-title">{{careerFair.name}}</h3>
-                        <p class="card-text">Venue : {{careerFair.venue}}</p>
-                        <p class="card-text">Date :{{careerFair.date}}</p>
-                        <a href="#" class="btn btn-outline-secondary">more info..</a>
-                    </div>
-                </div>
-            </div>
-           
+
+          <div class="col-sm-4 py-2" *ngFor="let careerFair of careerFairs">
+            <div class="card h-100 border-primary">
+              <div class="card-body">
+                <h3 class="card-title">{{careerFair.name}}</h3>
+                <p class="card-text">Venue : {{careerFair.venue}}</p>
+                <p class="card-text">Date :{{careerFair.date}}</p>
+                <a href="#" class="btn btn-outline-secondary">more info..</a>
+
+          
+              </div>
             </div>
           </div>
+
         </div>
       </div>
-      </body>
+    </div>
+  </div>
+</body>
