--- a/src/app/homescreen/homescreen.component.html
+++ b/src/app/homescreen/homescreen.component.html
@@ -25,7 +25,8 @@
               <a class="nav-link" href="#">Profile</a>
             </li>-->
             <li class="nav-item">
-              <a class="nav-link" href="#">Admin Login</a>
+             
+              <a routerLink="/loginadmin" routerLinkActive="active">Admin Login</a> 
             </li>
           </ul>
         </div>
