--- a/src/app/attendeecareerfair/attendeecareerfair.component.html
+++ b/src/app/attendeecareerfair/attendeecareerfair.component.html
@@ -31,7 +31,7 @@
                         <h3 class="card-title">{{careerFair.name}}</h3>
                         <p class="card-text">Venue : {{careerFair.venue}}</p>
                         <p class="card-text">Date :{{careerFair.date}}</p>
-                        <a href="#" class="btn btn-outline-secondary" routerLink="/careerfairdetail" routerLinkActive="active">more info..</a>
+                        <a class="btn btn-outline-secondary" [routerLink]="['/careerfairdetail', careerFair.careerFairID]"  routerLinkActive="active">View List of Recruiters</a>
                     </div>
                 </div>
             </div>
