--- a/src/app/careerfair/careerfair.component.html
+++ b/src/app/careerfair/careerfair.component.html
@@ -67,7 +67,7 @@
                 <h3 class="card-title">{{careerFair.name}}</h3>
                 <p class="card-text">Venue : {{careerFair.venue}}</p>
                 <p class="card-text">Date :{{careerFair.date}}</p>
-                <a class="btn btn-outline-secondary" [routerLink]="['/careerfairdetail', careerFair.careerFairID]"  routerLinkActive="active">more info...</a>  
+                <a class="btn btn-outline-secondary" [routerLink]="['/registeredattendees', careerFair.careerFairID]"  routerLinkActive="active">View Registered Attendees</a>  
 
                         
               </div>
