--- a/src/app/admincareerfair/admincareerfair.component.html
+++ b/src/app/admincareerfair/admincareerfair.component.html
@@ -1,1 +1,37 @@
-<p>admincareerfair works!</p>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
+        <div class="container">
+          <a class="navbar-brand" href="#">CAVA</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">                       
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>    
+      <div class="containerb">
+        <div class="card border-0 shadow my-5" style="margin: 100px;">      
+          <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
+            <h1 class="font-weight-light" style="text-align: center">Career Fairs</h1>
+            <!-- <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p> -->
+            <div class="row">        
+              <div class="col-sm-4 py-2" *ngFor = "let careerFair of careerFairs">
+                <div class="card h-100 border-primary">
+                    <div class="card-body">
+                        <h3 class="card-title">{{careerFair.name}}</h3>
+                        <p class="card-text">Venue : {{careerFair.venue}}</p>
+                        <p class="card-text">Date :{{careerFair.date}}</p>
+                        <!-- <a class="btn btn-outline-secondary" [routerLink]="['/careerfairdetail', careerFair.careerFairID]"  routerLinkActive="active">View List of Recruiters</a> -->
+                    </div>
+                </div>
+            </div>
+           
+            </div>
+          </div>
+        </div>
+      </div>
+      </body>
