Added profile updates for bio

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -62,6 +62,9 @@
                             <label>
                                 Languages: {{profileViewModel?.attendeeProfile?.languages}}
                             </label> <br>
+                            <label>
+                                    Bio: {{profileViewModel?.attendeeProfile?.bio}}
+                                </label> <br>
 
                             <button routerLink="/attendee">Update Profile Here</button><br>
 
