--- a/src/app/registeredattendees/registeredattendees.component.html
+++ b/src/app/registeredattendees/registeredattendees.component.html
@@ -26,13 +26,13 @@
                                     {{profileViewModel.attendee.firstName}} {{profileViewModel.attendee.lastName}} <br>
                                     {{profileViewModel.attendee.email}} <br>
                                     {{profileViewModel.attendee.city}} {{profileViewModel.attendee.state}} <br> 
-                                    <label>Bio:</label>{{profileViewModel.attendeeProfile.bio}} <br> 
                                     <label>Major(s):</label>{{profileViewModel.attendeeProfile.major}} <br> 
                                     <label>Minor(s):</label>{{profileViewModel.attendeeProfile.minor}} <br>            
                                     <label>Total GPA:</label>{{profileViewModel.attendeeProfile.totalGPA}} <br>
                                     <label>Degree Pursuing:</label>{{profileViewModel.attendeeProfile.degree}} <br>
                                     <label>Certifications:</label>{{profileViewModel.attendeeProfile.certifications}} <br>
-                                    <label>Languages:</label>{{profileViewModel.attendeeProfile.languages}}
+                                    <label>Languages:</label>{{profileViewModel.attendeeProfile.languages}} <br>
+                                    <label>Bio:</label><br>{{profileViewModel.attendeeProfile.bio}}
                                 </p>
                             </div>
                         </div>
