--- a/src/app/loginattendee/loginattendee.component.html
+++ b/src/app/loginattendee/loginattendee.component.html
@@ -27,7 +27,7 @@
           </div>
         </form>
 
-        <div class="login100-more" style="background-image: url('/images/bgGreen.jpg');">
+        <div class="login100-more" >
 
         </div>
       </div>
