--- a/src/app/loginemployer/loginemployer.component.html
+++ b/src/app/loginemployer/loginemployer.component.html
@@ -27,7 +27,7 @@
             </button>
           </div>
         </form>
-        <div class="login100-more" style="background-image: url('/images/bgGreen.jpg');">
+        <div class="login100-more">
         </div>
       </div>
     </div>
