--- a/src/app/careerfairdetail/careerfairdetail.component.html
+++ b/src/app/careerfairdetail/careerfairdetail.component.html
@@ -33,7 +33,7 @@
         <div class="card border-0 shadow my-5" style="margin: 100px;">
       
           <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
-            <h1 class="font-weight-light" style="text-align: center">Companies  - </h1>
+            <h1 class="font-weight-light" style="text-align: center">Companies</h1>
             <!-- <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p> -->
             <div class="row" style="text-align: center;">
     
