final sprint 3 changes

--- a/src/app/careerfair/careerfair.component.html
+++ b/src/app/careerfair/careerfair.component.html
@@ -8,6 +8,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+            <a class="nav-link" routerLink="/" routerLinkActive="active">Log Out</a>   
          
         </ul>
       </div>
