--- a/src/app/admincareerfair/admincareerfair.component.html
+++ b/src/app/admincareerfair/admincareerfair.component.html
@@ -7,7 +7,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">                       
+              <li class="nav-item">         
+                  <a class="nav-link" routerLink="/" routerLinkActive="active">Log Out</a>              
               </li>
             </ul>
           </div>
