--- a/src/app/attendeecareerfair/attendeecareerfair.component.html
+++ b/src/app/attendeecareerfair/attendeecareerfair.component.html
@@ -8,7 +8,8 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" routerLink="/profile" routerLinkActive="active">My Profile</a>
+                <a class="nav-link" routerLink="/profile" routerLinkActive="active">My Profile</a>  <a class="nav-link" routerLink="/" routerLinkActive="active">Log Out</a>  
+                
                 
               </li>
             </ul>
@@ -34,6 +35,7 @@
                         <a class="btn btn-outline-secondary" [routerLink]="['/careerfairdetail', careerFair.careerFairID]"  routerLinkActive="active">View List of Recruiters</a>
                         <!-- <a class="btn btn-outline-secondary" >Register</a> -->
                         <button mat-raised-button (click)="openDialog()"> Register {{data}}</button> 
+                      
                     </div>
                 </div>
             </div>
