--- a/src/app/careerfair/careerfair.component.html
+++ b/src/app/careerfair/careerfair.component.html
@@ -8,38 +8,31 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
-            <a class="nav-link" routerLink="/" routerLinkActive="active">Log Out</a>   
-         
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Log Out</a>
         </ul>
       </div>
     </div>
   </nav>
-
   <div class="containerb">
     <div class="card border-0 shadow my-5" style="margin: 100px;">
-
       <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
         <h1 class="font-weight-light" style="text-align: center">Career Fairs</h1>
-        <!-- <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p> -->
         <div class="row">
-
-         
           <div class="col-sm-4 py-2" *ngFor="let careerFair of careerFairs">
             <div class="card h-100 border-primary">
               <div class="card-body">
                 <h3 class="card-title">{{careerFair.name}}</h3>
                 <p class="card-text">Venue : {{careerFair.venue}}</p>
                 <p class="card-text">Date :{{careerFair.date}}</p>
-                <a class="btn btn-outline-secondary" [routerLink]="['/registeredattendees', careerFair.careerFairID]"  routerLinkActive="active">View Registered Attendees</a>  
-                <a class="btn btn-outline-secondary" [routerLink]="['/employerregistered', careerFair.careerFairID]"  routerLinkActive="active">Register</a>  
-                <!-- <button mat-raised-button (click)="openDialog()" class="btn btn-outline-secondary" style="margin-left: 20px;"> Register {{data}}</button>  -->
-                        
+                <a class="btn btn-outline-secondary" [routerLink]="['/registeredattendees', careerFair.careerFairID]"
+                  routerLinkActive="active">View Registered Attendees</a>
+                <button mat-raised-button (click)="openDialog()" class="btn btn-outline-secondary"
+                  style="margin-left: 20px;"> Register {{data}}</button>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </div>
- </div>
+  </div>
 </body>
