--- a/src/app/homescreen/homescreen.component.html
+++ b/src/app/homescreen/homescreen.component.html
@@ -1,72 +1,36 @@
-
-
-
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
-      <div class="container">
-        <a class="navbar-brand" href="#">CAVA</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <!--<li class="nav-item active">
-              <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Career Fair</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Notification</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Profile</a>
-            </li>-->
-            <li class="nav-item">
-             
-              <a routerLink="/loginadmin" routerLinkActive="active">Admin Login</a> 
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    
-    
+  <nav class="navbar navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
     <div class="container">
-      <div class="card border-0 shadow my-5">
-    
-        <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
-          <h1 class="font-weight-light" style="text-align: center">Welcome to CAVA</h1>
-          <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p>
-          <div class="row">
-            <div class="col-lg-12" style="text-align: center">
-    <button type="button" class="btn btn-success" style="margin: 50px" routerLink="/loginattendee" routerLinkActive="active">Niners</button>
-   
-              <!-- <button type="submit "  class="btn btn-success" style="margin: 50px" [routerLink]="['../login']">Attendees</button> -->
-    
-              <button type="button" class="btn btn-warning"style="margin: 50px" routerLink="/loginemployer" routerLinkActive="active">Recruiters</button>
-              <!-- <button type="submit " class="btn btn-warning" style="margin: 50px" [routerLink]="['../login']">Recruiters</button> -->
-    
-            </div>
-          </div>
-    
-    
-    
-          <div style="height: 370px">
-    
-          </div>
-    
-        </div>
-    
-    
+      <a class="navbar-brand" href="#">CAVA</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a routerLink="/loginadmin" routerLinkActive="active">Admin Login</a>
+          </li>
+        </ul>
       </div>
     </div>
-    
-    </body>
-    
-    
-    
-    
-    
+  </nav>
+  <div class="container">
+    <div class="card border-0 shadow my-5">
+      <div class="card-body p-5" style="padding:20px; margin-bottom: 20px">
+        <h1 class="font-weight-light" style="text-align: center">Welcome to CAVA</h1>
+        <p class="lead" style="text-align: center">Grab an opprtunity to meet your recruiters</p>
+        <div class="row">
+          <div class="col-lg-12" style="text-align: center">
+            <button type="button" class="btn btn-success" style="margin: 50px" routerLink="/loginattendee"
+              routerLinkActive="active">Niners</button>
+            <button type="button" class="btn btn-warning" style="margin: 50px" routerLink="/loginemployer"
+              routerLinkActive="active">Recruiters</button>
+          </div>
+        </div>
+        <div style="height: 370px">
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
